# python-frank-energie

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  frank_energie.py  models.py  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  sonar-project.properties  types.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  commit-enhancer.yml  dependabot-auto-merge.yml  labeler.yml  linting.yaml  publish-to-pypi.yml  pylint.yml  pyupgrade.yml  release-drafter.yaml  release.yaml  requirements.txt  run_query.yml  tests.yml
docs/: authentication.md
docs/privacy-policy/: index.md
python_frank_energie/: __init__.py  authentication.py  domain.py  exceptions.py  frank_energie.py  models.py  time_periods.py  types.py
scripts/: .env  test_batt_sessions.py  test_graphql_query_EnodeVehicles.py  test_login.py  test_me.py  test_query.py  test_user_prices.py  test_usersites.py
tests/: __init__.py  conftest.py  test_battery_sessions.py  test_contract_price_resolution_mutations.py  test_domain.py  test_frank_energie.py  test_login.py  test_models.py  test_renew_token.py  test_smart_batteries.py  test_smart_controls_mutations.py  test_smart_pv.py  test_user_country.py
tests/__snapshots__/: test_frank_energie.ambr  test_models.ambr  test_smart_batteries.ambr  test_smart_pv.ambr
tests/fixtures/: enode_vehicles.json  invoices.json  market_prices.json  month_summary.json  smartBatterySessions.json  smart_battery_details.json  smart_battery_sessions.json  smart_pv_system_summary.json  smart_pv_systems.json  user_smart_feed_in.json
tests/snapshots/: test_frank_energie.ambr  test_models.ambr  test_smart_batteries.ambr  test_smart_pv.ambr
