[tool.poetry]
name = "python-frank-energie"
version = "2026.4.8"
description = "Asynchronous Python client for the Frank Energie"
authors = ["HiDiHo01"]
maintainers = ["HiDiHo01"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/HiDiHo01/python-frank-energie"
repository = "https://github.com/HiDiHo01/python-frank-energie"
documentation = "https://github.com/HiDiHo01/python-frank-energie"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
packages = [
    { include = "python_frank_energie" },
]
keywords = [
  "home-assistant",
  "energy",
  "async",
  "asyncio",
  "api",
  "frank-energie"
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# Core dependencies
aiohttp = ">=3.9.0,<4.0.0"

# Time/date handling
# python-dateutil = ">=2.9.0, <3.0.0"

# JWT-related
PyJWT = "^2.10.1"

# Crypto
cryptography = ">=44.0.1,<47.0.0"

typing-extensions = ">=4.10.0"

[tool.poetry.group.dev.dependencies]
colorama = "^0.4.6"
iniconfig = "^2.1.0"
packaging = ">=24.2,<27.0"
aresponses = "^3.0.0"
black = ">=24.8,<27.0"
blacken-docs = "^1.19.1"
pre-commit = ">=3.8,<5.0"
pre-commit-hooks = ">=5,<7"
pytest = ">=8.4,<10.0"
pytest-asyncio = ">=0.24,<1.4"
pytest-cov = ">=6,<8"
ruff = "^0.15.9"
syrupy = ">=4.9.1,<6.0.0"
vulture = "^2.12"
freezegun = "^1.5.1"
safety = "^3.2.7"
codespell = "^2.3.0"
bandit = "^1.8.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/HiDiHo01/python-frank-energie/issues"
Changelog = "https://github.com/HiDiHo01/python-frank-energie/releases"

[tool.black]
target-version = ['py312']
line-length = 120

[tool.coverage.run]
branch = true
source = ["python_frank_energie"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto --cov --cov-report=html --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["E", "F", "W", "B", "I", "UP", "ASYNC"]
extend-select = ["D401", "SIM", "C4", "TCH"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["python_frank_energie"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.vulture]
min_confidence = 80
paths = ["python_frank_energie", "tests"]
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
